[gd_scene load_steps=9 format=3 uid="uid://cw7uu184sxeey"]

[ext_resource type="Script" uid="uid://b5i8c3h24rceu" path="res://Scenes/Menus/level_interface.gd" id="1_7nfen"]
[ext_resource type="Script" uid="uid://d8uj56tymrcr" path="res://Scenes/Menus/music_slider.gd" id="2_67hr8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2qs3"]
bg_color = Color(0.682353, 0.682353, 0.682353, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n2qs3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nfen"]
bg_color = Color(0.509286, 0.509286, 0.509286, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67hr8"]
bg_color = Color(0.306923, 0.306923, 0.306923, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trrwu"]
bg_color = Color(0.683077, 0.683077, 0.683077, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_653rj"]
bg_color = Color(0.255659, 0.255659, 0.255659, 1)

[node name="LevelInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7nfen")

[node name="background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="cash_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_bottom = 44.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_n2qs3")

[node name="cash_amount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -134.0
offset_bottom = 30.0
grow_horizontal = 0
text = "$"
horizontal_alignment = 2

[node name="incoming_tracker" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -302.0
offset_right = 302.0
offset_bottom = 44.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n2qs3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="menu_button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "menu
"

[node name="pause_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "||"

[node name="speedup_button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = ">>"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -225.0
offset_bottom = -53.0
grow_horizontal = 0
grow_vertical = 2

[node name="turret1_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "turret1
"

[node name="turret2_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "turret2"

[node name="turret3_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "turret3
"

[node name="turret4_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "turret4
"

[node name="options_panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -471.5
offset_top = -265.0
offset_right = 471.5
offset_bottom = 265.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="options_panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -198.0
offset_right = 198.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1

[node name="options_category" type="Panel" parent="options_panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -904.0
offset_top = -188.0
offset_right = -694.0
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="VBoxContainer" type="VBoxContainer" parent="options_panel/options_category"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -181.5
offset_right = 85.5
offset_bottom = 181.5
grow_horizontal = 2
grow_vertical = 2

[node name="general_button" type="Button" parent="options_panel/options_category/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "general"

[node name="audio_button" type="Button" parent="options_panel/options_category/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "audio"

[node name="controlls_button" type="Button" parent="options_panel/options_category/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "controls"

[node name="sub_general" type="Panel" parent="options_panel"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -661.0
offset_top = -188.0
offset_right = -29.0
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="general_title" type="Label" parent="options_panel/sub_general"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 107.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "General"
horizontal_alignment = 1

[node name="sub_audio" type="Panel" parent="options_panel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -661.0
offset_top = -188.0
offset_right = -29.0
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="audio_title" type="Label" parent="options_panel/sub_audio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 107.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Audio"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="options_panel/sub_audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -144.5
offset_right = 286.0
offset_bottom = 163.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="master_slider" type="HSlider" parent="options_panel/sub_audio/VBoxContainer"]
layout_mode = 2

[node name="music_slider" type="HSlider" parent="options_panel/sub_audio/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
script = ExtResource("2_67hr8")
audio_bus_name = "Music"

[node name="SFX_slider" type="HSlider" parent="options_panel/sub_audio/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="options_panel/sub_audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -281.5
offset_top = -152.5
offset_right = -159.5
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 44

[node name="master_label" type="Label" parent="options_panel/sub_audio/VBoxContainer2"]
layout_mode = 2
text = "Master"
horizontal_alignment = 1

[node name="music_label" type="Label" parent="options_panel/sub_audio/VBoxContainer2"]
layout_mode = 2
text = "music"
horizontal_alignment = 1

[node name="FSX_label" type="Label" parent="options_panel/sub_audio/VBoxContainer2"]
layout_mode = 2
text = "SFX"
horizontal_alignment = 1

[node name="sub_controls" type="Panel" parent="options_panel"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -661.0
offset_top = -188.0
offset_right = -29.0
offset_bottom = 215.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_653rj")

[node name="controls_title" type="Label" parent="options_panel/sub_controls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -107.0
offset_right = 107.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Controls"
horizontal_alignment = 1

[node name="exit_button" type="Button" parent="options_panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -44.0
offset_right = 1.0
offset_bottom = 41.0
grow_horizontal = 0
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "X"

[node name="menu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -155.0
offset_top = -179.0
offset_right = 155.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_right = 69.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 31
text = "Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -108.0
offset_right = 124.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_button" type="Button" parent="menu/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "Resume"

[node name="options_button" type="Button" parent="menu/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "Options
"

[node name="Map_button" type="Button" parent="menu/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "Map"

[node name="quit_button" type="Button" parent="menu/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/focus = SubResource("StyleBoxEmpty_n2qs3")
theme_override_styles/hover = SubResource("StyleBoxFlat_7nfen")
theme_override_styles/pressed = SubResource("StyleBoxFlat_67hr8")
theme_override_styles/normal = SubResource("StyleBoxFlat_trrwu")
text = "Quit
"

[connection signal="pressed" from="HBoxContainer/menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="options_panel/options_category/VBoxContainer/general_button" to="." method="_on_general_button_pressed"]
[connection signal="pressed" from="options_panel/options_category/VBoxContainer/audio_button" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="options_panel/options_category/VBoxContainer/controlls_button" to="." method="_on_controlls_button_pressed"]
[connection signal="value_changed" from="options_panel/sub_audio/VBoxContainer/music_slider" to="options_panel/sub_audio/VBoxContainer/music_slider" method="_on_value_changed"]
[connection signal="pressed" from="options_panel/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/Map_button" to="." method="_on_map_button_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
